--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+x264 (2:0.98.1653+git88b90d9-1) maverick; urgency=low
+
+  * new upstream release
+
+ -- Reinhard Tartler <siretart@tauware.de>  Sun, 04 Jul 2010 16:23:51 -0400
+
 x264 (2:0.85.1448+git1a6d32-4) lucid; urgency=low
 
   * install sse optimized version in /usr/lib/sse2. LP: #550524
