--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 x264 (2:0.98.1653+git88b90d9-1) maverick; urgency=low
 
+  * require libavformat-dev from 0.6 or better
+  * remove conflicts/replaces to ancient package x264-bin (dapper!
+    times)
   * new upstream release
 
  -- Reinhard Tartler <siretart@tauware.de>  Sun, 04 Jul 2010 16:23:51 -0400
